# flies

./: CMakeLists.txt  main.cpp
cell/: CMakeLists.txt  cell.cpp  cell.h
fly/: CMakeLists.txt  fly.cpp  fly.h
mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
plant/: CMakeLists.txt  plant.cpp  plant.h
